--- a/dogs/colordogs.html
+++ b/dogs/colordogs.html
@@ -9,30 +9,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test menu</title>
+    <title>Les autres chiens | Nos Animaux !</title>
     <script defer src="https://unpkg.com/alpinejs"></script>
+    <link rel="icon" href="../public/icones/MaterialSymbolsLightPets.svg">
     <link rel="stylesheet" href="../src/css/style.css">
     </link>
 </head>
 
 <body>
     <header>
-        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"
-            style="background-color:#ff7979 ; border-color:#000000"><img src="/public/icones/MdiMenu.svg"> </button>
+        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"><img
+                src="/public/icones/MdiMenu.svg"> </button>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="../index.html">Page d'accueil<img
-                            src="../public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../cats/index.html">FELIS CATUS<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../cats/blackcats.html">Chats noirs<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../cats/colorcats.html">Autres chats<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../dogs/index.html">CANIS LUPUS FAMILIARIS<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../dogs/goldenretriever.html">Golden Retriever<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
+                <li><a href="../index.html">Page d'accueil<img src="../public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../cats/index.html">Les chats<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../cats/blackcats.html">Chats noirs<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../cats/colorcats.html">Autres chats<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../dogs/index.html">Les chiens<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../dogs/goldenretriever.html">Golden Retriever<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
             </ul>
         </nav>
         <aside>
@@ -44,12 +45,35 @@
         </aside>
     </header>
 
-
-    <h1>Les autres chiens</h1>
-    <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
-    <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
-        <p>
-            . Source : <a href="https://fr.wikipedia.org/wiki/Chat" class="nounderline" target="_blank">Wikipédia</a>
-        </p>
-
+    <main>
+        <section>
+            <h1>Les autres chiens</h1>
+            <h2>Une espèce extrêmement répandue</h2>
+            <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
+            <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
+                <p>
+                    À une époque, les chiens étaient élevés dans le but de remplir une fonction bien précise pour
+                    faciliter le travail de
+                    l'Homme. C'est la raison pour laquelle une nomenclature a été créée, afin de pouvoir classer les
+                    races de chien dans
+                    différentes catégories. Chaque race de chien a été classifiée en 1983 par Raymond Triquet, qui les
+                    répartit alors dans
+                    10 groupes différents, chaque groupe se basant sur la fonction de l’animal. La FCI (Fédération
+                    Cynologique
+                    Internationale) a rendu cette classification officielle au niveau international. Cette dernière est
+                    consultable ici : <a href="https://www.zooplus.fr/magazine/chien/races-de-chien" class="nounderline"
+                        target="_blank">Zooplus</a>.
+                </p>
+            </div>
+        </section>
+        <section>
+            <h3>Petite galerie</h3>
+            <img class="media media--fullwidth"
+                src="../public/img/otherdogs/640px-Carnivora_-_Canis_lupus_familiaris_-_36.jpg">
+            <img class="media media--fullwidth" src="../public/img/otherdogs/Dogs_standing_in_Manila_19.jpg">
+            <img class="media media--fullwidth" src="../public/img/otherdogs/Two_Wire_Fox_Terriers.jpg">
+        </section>
+    </main>
 </body>
+
+</html>
