--- a/dogs/goldenretriever.html
+++ b/dogs/goldenretriever.html
@@ -9,30 +9,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test menu</title>
+    <title>Les Golden retriever | Nos Animaux !</title>
     <script defer src="https://unpkg.com/alpinejs"></script>
+    <link rel="icon" href="../public/icones/MaterialSymbolsLightPets.svg">
     <link rel="stylesheet" href="../src/css/style.css">
     </link>
 </head>
 
 <body>
     <header>
-        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"
-            style="background-color:#ff7979 ; border-color:#000000"><img src="/public/icones/MdiMenu.svg"> </button>
+        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"><img
+                src="/public/icones/MdiMenu.svg"> </button>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="../index.html">Page d'accueil<img
-                            src="../public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../cats/index.html">FELIS CATUS<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../cats/blackcats.html">Chats noirs<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../cats/colorcats.html">Autres chats<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../dogs/index.html">CANIS LUPUS FAMILIARIS<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../dogs/colordogs.html">Autres chiens<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
+                <li><a href="../index.html">Page d'accueil<img src="../public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../cats/index.html">Les chats<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../cats/blackcats.html">Chats noirs<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../cats/colorcats.html">Autres chats<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../dogs/index.html">Les chiens<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../dogs/colordogs.html">Autres chiens<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
             </ul>
         </nav>
         <aside>
@@ -44,12 +45,33 @@
         </aside>
     </header>
 
-
-    <h1>Les Golden retriever</h1>
-    <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
-    <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
-        <p>
-            . Source : <a href="https://fr.wikipedia.org/wiki/Chat" class="nounderline" target="_blank">Wikipédia</a>
-        </p>
-
+    <main>
+        <section>
+            <h1>Les Golden retriever</h1>
+            <h2>Le plus connu des chiens !</h2>
+            <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
+            <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
+                <p>
+                    Le Golden Retriever est l'une des races les plus populaires au monde tant il respire une attitude
+                    joviale et
+                    amicale. Son intelligence et son image de chien affectueux et parfait pour la famille expliquent ce
+                    succès.
+                    Son manteau or est caractéristique. C'est également un excellent nageur et apte pour le travail. La
+                    chasse,
+                    chien-guide d'aveugles, recherche et sauvetage sont des domaines où il excelle. Source : <a
+                        href="https://www.woopets.fr/chien/race/golden-retriever/" class="nounderline"
+                        target="_blank">Woopets</a>.
+                </p>
+            </div>
+        </section>
+        <section>
+            <h3>Petite galerie</h3>
+            <img class="media media--fullwidth" src="../public/img/goldenretriever/640px-Golden_Retriever_2019.jpg">
+            <img class="media media--fullwidth"
+                src="../public/img/goldenretriever/640px-Happy-afternoon-golden-retriever-yoko_24326853815.jpg">
+            <img class="media media--fullwidth" src="../public/img/goldenretriever/Golden_retrievers.jpg">
+        </section>
+    </main>
 </body>
+
+</html>
