--- a/dogs/index.html
+++ b/dogs/index.html
@@ -9,30 +9,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test menu</title>
+    <title>Les chiens | Nos Animaux !</title>
     <script defer src="https://unpkg.com/alpinejs"></script>
+    <link rel="icon" href="../public/icones/MaterialSymbolsLightPets.svg">
     <link rel="stylesheet" href="../src/css/style.css">
     </link>
 </head>
 
 <body>
     <header>
-        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"
-            style="background-color:#ff7979 ; border-color:#000000"><img src="/public/icones/MdiMenu.svg"> </button>
+        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"><img
+                src="/public/icones/MdiMenu.svg"> </button>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="../index.html">Page d'accueil<img
-                            src="../public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../cats/index.html">FELIS CATUS<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../cats/blackcats.html">Chats noirs<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../cats/colorcats.html">Autres chats<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../dogs/goldenretriever.html">Golden Retriever<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
-                <li><a href="../dogs/colordogs.html">Autres chiens<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
+                <li><a href="../index.html">Page d'accueil<img src="../public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../cats/index.html">Les chats<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../cats/blackcats.html">Chats noirs<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../cats/colorcats.html">Autres chats<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../dogs/goldenretriever.html">Golden Retriever<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
+                <li><a href="../dogs/colordogs.html">Autres chiens<img src="/public/icones/MdiMenuRight.svg"
+                            alt="flèche lien"></a></li>
             </ul>
         </nav>
         <aside>
@@ -44,18 +45,32 @@
         </aside>
     </header>
 
-
-
-    <h1>Les chiens (CANIS LUPUS FAMILIARIS)</h1>
-    <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
-    <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
-        <p>
-            Le Chien (Canis lupus familiaris) est la sous-espèce domestique de Canis lupus (Loup gris), un mammifère de
-            la
-            famille
-            des Canidés (Canidae), laquelle comprend également le dingo, chien domestique retourné à l'état sauvage.
-            Source
-            : <a href="https://fr.wikipedia.org/wiki/Chien" class="nounderline" target="_blank">Wikipédia</a>
-        </p>
-
+    <main>
+        <section>
+            <h1>Les chiens</h1>
+            <h2>canis lupus familiaris</h2>
+            <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
+            <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
+                <p>
+                    Le Chien (Canis lupus familiaris) est la sous-espèce domestique de Canis lupus (Loup gris), un
+                    mammifère de la famille des Canidés (Canidae), laquelle comprend également le dingo, chien
+                    domestique retourné à l'état sauvage. Source : <a href="https://fr.wikipedia.org/wiki/Chien"
+                        class="nounderline" target="_blank">Wikipédia</a>.
+                </p>
+            </div>
+            <section>
+                <br>
+                <a href="/dogs/goldenretriever.html"><button type="button" class="intern-link">Golden
+                        retriever</button></a>
+                <a href="/dogs/colordogs.html"><button type="button" class="intern-link">Autres chiens</button></a>
+                </br>
+            </section>
+        </section>
+        <section>
+            <h3>Petite galerie</h3>
+            <img class="media media--fullwidth" src="../public/img/collage_of_Nine_Dogs.jpg">
+        </section>
+    </main>
 </body>
+
+</html>
