--- a/dogs/colordogs.html
+++ b/dogs/colordogs.html
@@ -48,20 +48,17 @@
     <main>
         <section>
             <h1>Les autres chiens</h1>
-            <h2>Une espèce extrêmement répandue</h2>
+            <h2>Une espèce extrêmement répandue...</h2>
             <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
             <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
                 <p>
-                    À une époque, les chiens étaient élevés dans le but de remplir une fonction bien précise pour
-                    faciliter le travail de
-                    l'Homme. C'est la raison pour laquelle une nomenclature a été créée, afin de pouvoir classer les
-                    races de chien dans
-                    différentes catégories. Chaque race de chien a été classifiée en 1983 par Raymond Triquet, qui les
-                    répartit alors dans
-                    10 groupes différents, chaque groupe se basant sur la fonction de l’animal. La FCI (Fédération
-                    Cynologique
-                    Internationale) a rendu cette classification officielle au niveau international. Cette dernière est
-                    consultable ici : <a href="https://www.zooplus.fr/magazine/chien/races-de-chien" class="nounderline"
+                    À une époque, les chiens étaient élevés dans le but de remplir une fonction bien précise
+                    pourfaciliter le travail del'Homme. C'est la raison pour laquelle une nomenclature a été créée, afin
+                    de pouvoir classer lesraces de chien dansdifférentes catégories. Chaque race de chien a été
+                    classifiée en 1983 par Raymond Triquet, qui lesrépartit alors dans10 groupes différents, chaque
+                    groupe se basant sur la fonction de l’animal. La FCI (FédérationCynologiqueInternationale) a rendu
+                    cette classification officielle au niveau international. Cette dernière estconsultable ici : <a
+                        href="https://www.zooplus.fr/magazine/chien/races-de-chien" class="nounderline"
                         target="_blank">Zooplus</a>.
                 </p>
             </div>
