--- a/dogs/goldenretriever.html
+++ b/dogs/goldenretriever.html
@@ -52,15 +52,12 @@
             <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
             <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
                 <p>
-                    Le Golden Retriever est l'une des races les plus populaires au monde tant il respire une attitude
-                    joviale et
-                    amicale. Son intelligence et son image de chien affectueux et parfait pour la famille expliquent ce
-                    succès.
-                    Son manteau or est caractéristique. C'est également un excellent nageur et apte pour le travail. La
-                    chasse,
-                    chien-guide d'aveugles, recherche et sauvetage sont des domaines où il excelle. Source : <a
-                        href="https://www.woopets.fr/chien/race/golden-retriever/" class="nounderline"
-                        target="_blank">Woopets</a>.
+                    Le Golden Retriever est l'une des races les plus populaires au monde tant il respire une
+                    attitudejoviale etamicale. Son intelligence et son image de chien affectueux et parfait pour la
+                    famille expliquent cesuccès.Son manteau or est caractéristique. C'est également un excellent nageur
+                    et apte pour le travail. Lachasse,chien-guide d'aveugles, recherche et sauvetage sont des domaines
+                    où il excelle. Source : <a href="https://www.woopets.fr/chien/race/golden-retriever/"
+                        class="nounderline" target="_blank">Woopets</a>.
                 </p>
             </div>
         </section>
