--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li><a href="cats/colorcats.html" class="link-text">Autres chats<img src="/public/icones/MdiMenuRight.svg"
               alt="flèche lien"></a></li>
         <li><a href="dogs/index.html" class="link-text">Les chiens<img src="/public/icones/MdiMenuRight.svg"
-              alt="flèche lien"></a>
+              alt="flèche lien" class="arrow"></a>
         </li>
         <li><a href="dogs/goldenretriever.html" class="link-text">Golden Retriever<img
               src="/public/icones/MdiMenuRight.svg" alt="flèche lien"></a></li>
@@ -48,7 +48,7 @@
 
   <main>
     <section>
-      <h1>Animaux de compagnie</h1>
+      <h1>Nos Animaux !</h1>
       <h2>Accueil</h2>
       <p>
         Bienvenue à tous. Ceci est une page dédiée à nos meilleurs amis : les animaux de compagnie. Ce site est
