--- a/dogs/index.html
+++ b/dogs/index.html
@@ -22,17 +22,17 @@
                 src="/public/icones/MdiMenu.svg"> </button>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="../index.html">Page d'accueil<img src="../public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><a href="../index.html">Page d'accueil<img src="../public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
-                <li><a href="../cats/index.html">Les chats<img src="/public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><a href="../cats/index.html">Les chats<img src="/public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
-                <li><a href="../cats/blackcats.html">Chats noirs<img src="/public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><a href="../cats/blackcats.html">Chats noirs<img src="/public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
-                <li><a href="../cats/colorcats.html">Autres chats<img src="/public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><a href="../cats/colorcats.html">Autres chats<img src="/public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
-                <li><a href="../dogs/goldenretriever.html">Golden Retriever<img src="/public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><a href="../dogs/goldenretriever.html">Golden Retriever<img src="/public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
-                <li><a href="../dogs/colordogs.html">Autres chiens<img src="/public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><a href="../dogs/colordogs.html">Autres chiens<img src="/public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
             </ul>
         </nav>
