--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
       ><img src="/public/icones/MdiMenu.svg"> </button>
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
       <ul>
-        <li><a href="cats/index.html" class="link-text">Les chats<img src="/public/icones/MdiMenuRight.svg"
+        <li class="menu-item"><a href="cats/index.html" class="link-text">Les chats<img src="/public/icones/MdiMenuRight.svg"
               alt="flèche lien"></a></li>
-        <li><a href="cats/blackcats.html" class="link-text">Chats noirs<img src="/public/icones/MdiMenuRight.svg"
+        <li class="menu-item"><a href="cats/blackcats.html" class="link-text">Chats noirs<img src="/public/icones/MdiMenuRight.svg"
               alt="flèche lien"></a></li>
-        <li><a href="cats/colorcats.html" class="link-text">Autres chats<img src="/public/icones/MdiMenuRight.svg"
+        <li class="menu-item"><a href="cats/colorcats.html" class="link-text">Autres chats<img src="/public/icones/MdiMenuRight.svg"
               alt="flèche lien"></a></li>
-        <li><a href="dogs/index.html" class="link-text">Les chiens<img src="/public/icones/MdiMenuRight.svg"
-              alt="flèche lien" class="arrow"></a>
+        <li class="menu-item"><a href="dogs/index.html" class="link-text">Les chiens<img src="/public/icones/MdiMenuRight.svg"
+              alt="flèche lien"></a>
         </li>
-        <li><a href="dogs/goldenretriever.html" class="link-text">Golden Retriever<img
+        <li class="menu-item"><a href="dogs/goldenretriever.html" class="link-text">Golden Retriever<img
               src="/public/icones/MdiMenuRight.svg" alt="flèche lien"></a></li>
-        <li><a href="dogs/colordogs.html" class="link-text">Autres chiens<img src="/public/icones/MdiMenuRight.svg"
+        <li class="menu-item"><a href="dogs/colordogs.html" class="link-text">Autres chiens<img src="/public/icones/MdiMenuRight.svg"
               alt="flèche lien"></a></li>
       </ul>
     </nav>
