--- a/cats/colorcats.html
+++ b/cats/colorcats.html
@@ -22,17 +22,17 @@
                 src="/public/icones/MdiMenu.svg"> </button>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li class="menu-item"><img src="/public/icones/MdiHomemenu.svg" alt="Logo" class="logohome"><a href="../index.html">Page d'accueil<img src="../public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><img src="/public/icones/MdiHomemenu.svg" alt="Logo" class="logohome"><a href="../index.html" class="link-text">Page d'accueil<img src="../public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
-                <li class="menu-item"><img src="/public/icones/MdiCat.svg" alt="Logo"><a href="../cats/index.html">Les chats<img src="/public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><img src="/public/icones/MdiCat.svg" alt="Logo"><a href="../cats/index.html" class="link-text">Les chats<img src="/public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
-                <li class="menu-item"><img src="/public/icones/MdiCat.svg" alt="Logo"><a href="../cats/blackcats.html">Chats noirs<img src="/public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><img src="/public/icones/MdiCat.svg" alt="Logo"><a href="../cats/blackcats.html" class="link-text">Chats noirs<img src="/public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
-                <li class="menu-item"><img src="/public/icones/MdiDog.svg" alt="Logo"><a href="../dogs/index.html">Les chiens<img src="/public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><img src="/public/icones/MdiDog.svg" alt="Logo"><a href="../dogs/index.html" class="link-text">Les chiens<img src="/public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
-                <li class="menu-item"><img src="/public/icones/MdiDog.svg" alt="Logo"><a href="../dogs/goldenretriever.html">Golden Retriever<img src="/public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><img src="/public/icones/MdiDog.svg" alt="Logo"><a href="../dogs/goldenretriever.html" class="link-text">Golden Retriever<img src="/public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
-                <li class="menu-item"><img src="/public/icones/MdiDog.svg" alt="Logo"><a href="../dogs/colordogs.html">Autres chiens<img src="/public/icones/MdiMenuRight.svg"
+                <li class="menu-item"><img src="/public/icones/MdiDog.svg" alt="Logo"><a href="../dogs/colordogs.html" class="link-text">Autres chiens<img src="/public/icones/MdiMenuRight.svg"
                             alt="flèche lien"></a></li>
             </ul>
         </nav>
